# viz-fgk-compressor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  colors.h  console.c  console.h  defines.h  main.c  minunit.h  nomefile.txt
docs/: README.md  metadata.yaml
docs/presentation/: VIZ - Presentation 2.pptx
fgk/: huffmantree.c  huffmantree.h  utilities.h  utlities.c
notes/denvit/: csv1.csv  decode_byte.md  nodes_position.md  nyt_path_mask.txt  result.txt
scripts/: benchmark.sh  bm-results-converter.py  test-all-files.sh  test-decompression.sh  test.sh
test/expected-results/: aardvark.txt  bookkeeper-hex.txt  bookkeeper.txt  engineering.txt  foobar.txt  mississippi.txt  sleeplessness.txt
test/files/: file.tar  fitnessgram.txt
test/files/compression/text/: adaptivehuffman.txt  more-a-3.txt  sinusoide.txt
test/files/decompression/: 100000.viz  1k-04.viz  1k-05.viz  abcdefghi.viz  abcdefghij.viz  denvit-picture-1.viz  fitnessgram.viz  ripetizioni.viz  sinusoide.viz
test/files/text/: ripetizioni.txt
test/files/viz/: 1000.viz  49-a.viz  adaptivehuffman.viz  alice.viz  bible.viz  test-1.viz
